@@ -1,0 +1,31 @@
+Надо знать, чем закусывать. Самая лучшая закуска, ежели желаете знать, селедка.
+Съели вы ее кусочек с лучком и с горчичным соусом, сейчас же, благодетель мой,
+пока еще чувствуете в животе искры, кушайте икру саму по себе или, ежели
+желаете, с лимончиком, потом простой редьки с солью, потом опять селедки, но
+всего лучше, благодетель, рыжики соленые, ежели их изрезать мелко, как икру, и,
+понимаете ли, с луком, с прованским маслом... объедение!
+
+Как только из кухни приволокли кулебяку, сейчас же, немедля, нужно вторую
+выпить. Кулебяка должна быть аппетитная, бесстыдная, во всей своей наготе, чтоб
+соблазн был. Подмигнешь на нее глазом, отрежешь этакий кусище и пальцами над
+ней пошевелишь вот этак, от избытка чувств. Станешь ее есть, а с нее масло, как
+слезы, начинка жирная, сочная, с яйцами, с потрохами, с луком...
+
+Как только кончили с кулебякой, так сейчас же, чтоб аппетита не перебить,
+велите щи подавать... Щи должны быть горячие, огневые. Но лучше всего,
+благодетель мой, борщок из свеклы на хохлацкий манер, с ветчинкой и с
+сосисками. К нему подаются сметана и свежая петрушечка с укропцем. Великолепно
+также рассольник из потрохов и молоденьких почек, а ежели любите суп, то из
+супов наилучший, который засыпается кореньями и зеленями: морковкой, спаржей,
+цветной капустой и всякой тому подобной юриспруденцией.
+
+Как только скушали борщок или суп, сейчас же велите подавать рыбное,
+благодетель. Из рыб безгласных самая лучшая — это жареный карась в сметане;
+только, чтобы он не пах тиной и имел тонкость, нужно продержать его живого в
+молоке целые сутки. Хорош также судак или карпий с подливкой из помидоров и
+грибков. Но рыбой не насытишься, это еда несущественная, главное в обеде не
+рыба, не соусы, а жаркое.
+
+После жаркого человек становится сыт и впадает в сладостное затмение. В это
+время и телу хорошо и на душе умилительно. Для услаждения можете выкушать
+рюмочки три запеканочки.
